sumo/tests/dfrouter/errors/detector_flow_files/broken_detectors_flows_file1g/detector_defs.dfrouter
<?xml version="1.0"?>

<!-- generated on Mon Sep 10 00:02:31 2007 by SUMO dfrouter Version dev-SVN-r4433
<configuration>

   <input>
      <net-file>input_tri.net.xml</net-file>
      <detector-files>input_tri.det.xml</detector-files>
      <detector-flow-files>input_flows.txt</detector-flow-files>
   </input>

   <output>
      <detectors-output>detectors_def.det.xml</detectors-output>
   </output>

</configuration>
-->

<detectors>
   <detectorDefinition id="MQ_beg" lane="beg_0" pos="5.00" type="source"/>
   <detectorDefinition id="MQ_middle" lane="middle_0" pos="500.00" type="between"/>
   <detectorDefinition id="MQ_1toR" lane="1toR_0" pos="100.00" type="between"/>
   <detectorDefinition id="MQ_R" lane="R_0" pos="500.00" type="between"/>
   <detectorDefinition id="MQ_Rto2" lane="Rto2_0" pos="100.00" type="between"/>
   <detectorDefinition id="MQ_1toL" lane="1toL_0" pos="100.00" type="between"/>
   <detectorDefinition id="MQ_L" lane="L_0" pos="500.00" type="between"/>
   <detectorDefinition id="MQ_Lto2" lane="Lto2_0" pos="100.00" type="between"/>
   <detectorDefinition id="MQ_end" lane="end_0" pos="50.00" type="sink"/>
</detectors>
